--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "hbs": "^4.2.0",
+    "nodemon": "^2.0.19",
     "requests": "^0.3.0"
   }
 }
